--- a/engine-ui/packages/console-ui/src/webapps/main/styles/myantd.scss
+++ b/engine-ui/packages/console-ui/src/webapps/main/styles/myantd.scss
@@ -396,3 +396,8 @@
     height: 'auto';
     min-height: calc(100% - 120px);
 }
+.no-card-border{
+    .ant-card-bordered{
+        border-width: 0;
+    }
+}
