--- a/engine-ui/packages/console-ui/src/webapps/main/components/ide/ide.scss
+++ b/engine-ui/packages/console-ui/src/webapps/main/components/ide/ide.scss
@@ -179,6 +179,7 @@
                         width: 100%;
                         text-indent: 5px;
                         background: inherit;
+                        resize: none;
                     }
 
                     textarea::-webkit-scrollbar { 
